--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_install:
   - sudo apt-get -qq install cmake gcc-4.8 libopencv-dev
 
 script:
-  - cd lbf && cmake ./ && make
+  - cd lbf && cmake ./ && make && cd ..
+  - cd esr && cmake ./ && make && cd ..
 
